--- a/profapp/templates/partials/Log in - Profireader.html
+++ b/profapp/templates/partials/Log in - Profireader.html
@@ -20,7 +20,7 @@
     <form class="login-form-profirider" id="login-form-profirider" action="{{ url_for('auth.login') }}" method="post">
         <input class="form-control" type="email" placeholder="email" required name="email">
         <input class="form-control" type="password" placeholder="password" required name="password">
-        <input class="sabmit-form" type="submit">
+        <input class="submit-form" type="submit">
         <div class="logout-now">
             <p>{{ '{{' }}_('Forgot your password'){{ '}}' }}? <a href="{{ url_for('auth.password_reset_request') }}">{{ '{{' }}_('Click here to Reset it'){{ '}}' }}</a>.</p>
             <p>{{ '{{' }}_('New user'){{ '}}' }}? <a href="{{ url_for('auth.signup') }}">{{ '{{' }}_('Click here to register'){{ '}}' }}</a>.</p>
