--- a/profapp/templates/pager.html
+++ b/profapp/templates/pager.html
@@ -11,7 +11,7 @@
 <script type="text/ng-template" id="cropper.html">
     {% raw %}
 
-    <div style="position: relative;  width: 100%; height: 300px;" class="img-container cropper-bg">
+    <div style="position: relative;  width: 100%; height: 100%;" class="img-container cropper-bg">
         <div  style="position: relative;  width: 100%; height: 100%;" class="img-container-cropper">
             <img style="width: 100%; height: 100%;"/>
         </div>
@@ -48,7 +48,7 @@
             </span>
           </label>
 
-        <button ng-repeat="(url_class_name, url) in custom_urls" class="btn btn-primary" type="button"
+        <button ng-repeat="(url_class_name, url) in prCrop.preset_urls" class="btn btn-primary" type="button"
                 ng-click="selectCustomUrl(url_class_name)">
                 <span class="docs-tooltip" data-toggle="tooltip" title="{{ url_class_name }}"><span
                         class="glyphicon {{ url_class_name }}"></span></span>
