--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -788,6 +788,70 @@ body {
   border-radius: 3px;
   padding: 5px 15px;
 }
+/* --- MESSENGER --- */
+.search-friends {
+  margin-bottom: 10px;
+  margin-top: 15px;
+}
+.messenger-block {
+  border: 1px solid #DCE4EC;
+  margin-bottom: 100px;
+  box-shadow: 2px 2px 1px rgba(0, 0, 0, 0.2);
+}
+.messenger-block .friends-block .friend-contact {
+  padding-right: 15px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #DCE4EC;
+}
+.messenger-block .friends-block .friend-contact img {
+  width: 40px;
+}
+.messenger-block .friends-block .friend-contact .name {
+  color: #000;
+}
+.messenger-block .friends-block .friend-contact .date {
+  color: #909090;
+}
+.messenger-block .message-block {
+  border-left: 1px solid #DCE4EC;
+  border-right: 1px solid #DCE4EC;
+  padding-top: 15px;
+}
+.messenger-block .message-block .avatar {
+  width: 45px;
+  margin: 6px 0px 0px 20px;
+}
+.messenger-block .message-block .message-text span {
+  color: #C62828;
+  font-size: 14px;
+}
+.messenger-block .message-block .message-text p {
+  font-size: 12px;
+  color: #000;
+}
+.messenger-block .message-block span {
+  font-size: 12px;
+  color: #909090;
+}
+.messenger-block .message-block .add-message {
+  border-top: 1px solid #ECF0F1;
+}
+.messenger-block .message-block .add-message textarea {
+  width: 94%;
+  margin-left: 3%;
+  margin-top: 3%;
+  border-color: #DCE4EC;
+}
+.messenger-block .message-block .add-message button {
+  float: right;
+  margin-right: 3%;
+  background-color: #40C628;
+  border: none;
+  border-radius: 3px;
+  color: #fff;
+  padding: 5px 15px;
+}
 /* ---MEDIA--- */
 @media screen and (max-width: 764px) {
   .menu-site ul {
