--- a/profapp/templates/help.html
+++ b/profapp/templates/help.html
@@ -10,8 +10,8 @@
         <h3>{{ __('Надішліть нам повідомлення') }}<br>
         <small>{{ __('Адміністратор сайту зв~яжеться з Вами') }}</small></h3>
         <div class="form-for-message col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3">
-            <input type="email" class="form-control" placeholder="Email" value="{{ g.user.profireader_email }}">
-            <textarea class="form-control" rows="4" placeholder="Питання та побажання"></textarea>
+            <input pr-test="Email" type="email" class="form-control" placeholder="Email" value="{{ g.user.profireader_email }}">
+            <textarea class="form-control" rows="4" placeholder="Питання та побажання" pr-test="TextArea"></textarea>
     <button class="pull-right" type="submit">Надіслати </button>
         </div>
     </form>
