--- a/profapp/templates/company/companies.html
+++ b/profapp/templates/company/companies.html
@@ -138,8 +138,8 @@
         <div class="row company-list">
 
 
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h3 ng-if="data.companies">{{ _('Your company list:')
-                }}</h3>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 link-page"><h5 ng-if="data.companies">{{ _('Your company list:')
+                }}</h5>
                 <h2 ng-if="!data.companies && !loading">You haven't got any company yet!Create own or join to!</h2>
             </div>
 
