--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -723,6 +723,11 @@ body {
   margin-top: 12px;
 }
 .flash-message-err {
+  z-index: 100;
+  position: fixed;
+  right: 0;
+  background-color: #fff;
+  bottom: -30px;
   box-shadow: 3px 4px 7px rgba(0, 0, 0, 0.3);
   margin-bottom: 50px;
   padding-left: 0;
@@ -745,6 +750,11 @@ body {
   cursor: pointer;
 }
 .flash-message-succsess {
+  position: fixed;
+  z-index: 90;
+  right: 0;
+  bottom: -30px;
+  background-color: #fff;
   box-shadow: 3px 4px 7px rgba(0, 0, 0, 0.3);
   margin-bottom: 50px;
   padding-left: 0;
