--- a/profapp/templates/flashed-messages.html
+++ b/profapp/templates/flashed-messages.html
@@ -22,12 +22,15 @@
                         }
                     });
                 }, atime)
-            }
+            };
+
+
 
         };
 
         $scope.closeAlert = function (index) {
             $scope.alerts.splice(index, 1);
+
         };
 
 
@@ -39,12 +42,10 @@
 </script>
 
 {#  TODO: MY BY OZ: #}
-<div ng-controller="message-controller" id="controller-message-controller"
-     style="position: fixed; margin-top: 120px;">
+<div ng-controller="message-controller" id="controller-message-controller">
     {% raw %}
-
     <div ng-repeat="alert in alerts" class="row">
-        <div ng-if="alert.type=='success'" class="col-lg-offset-3 col-lg-6 flash-message-succsess">
+        <div ng-if="alert.type=='success' && !close_current_alert" class="col-lg-offset-3 col-lg-6 flash-message-succsess" >
             <div class="col-lg-4 img-message">
                 <img src="../../static/images/success.png" alt="success">
             </div>
@@ -64,7 +65,6 @@
                 <p>{{ alert.msg }}</p>
             </div>
         </div>
-
     </div>
     {% endraw %}
 </div>
