--- a/profapp/templates/partials/Profireader_content.html
+++ b/profapp/templates/partials/Profireader_content.html
@@ -22,7 +22,7 @@
         </div>
         <div class="row">
             <a href="{{ url_for('general.send_email_create_portal') }}">
-            <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 index-links">
+            <div pr-test="CreatePortal" class="col-lg-5 col-md-5 col-sm-5 col-xs-12 index-links">
                 <span><i class="fa fa-pencil fa-3x"></i></span>
                 <h3>Для видавців</h3>
                 <p>Миттєво створити портал (веб+мобайл) для свого медіа, без початкових інвестицій та технічних
@@ -36,7 +36,7 @@
             </a>
 
             <a href="{{ url_for('general.portals_list') }}">
-                <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 pull-right index-links">
+                <div pr-test="PortalList" class="col-lg-5 col-md-5 col-sm-5 col-xs-12 pull-right index-links">
                     <span><i class="fa fa-book fa-3x"></i></span>
                     <h3>Для читачів</h3>
                     <p>Підписатись на улюблене медіа, портал якого створений на основі сервісу Profireader.com</p>
