--- a/profapp/templates/flashed-messages.html
+++ b/profapp/templates/flashed-messages.html
@@ -22,12 +22,15 @@
                         }
                     });
                 }, atime)
-            }
+            };
+
+
 
         };
 
         $scope.closeAlert = function (index) {
             $scope.alerts.splice(index, 1);
+
         };
 
 
@@ -39,24 +42,12 @@
 </script>
 
 {#  TODO: MY BY OZ: #}
-<div ng-controller="message-controller" id="controller-message-controller"
-     style="position: fixed; margin-top: 120px;">
+<div ng-controller="message-controller" id="controller-message-controller">
     {% raw %}
-
     <div ng-repeat="alert in alerts" class="row">
-        <div ng-if="alert.type=='success'" class="col-lg-offset-3 col-lg-6 flash-message-succsess">
+        <div ng-if="alert.type=='success' && !close_current_alert" class="col-lg-offset-3 col-lg-6 flash-message-succsess" >
             <div class="col-lg-4 img-message">
-                <img src="../../static/images/success.png" alt="success">
-            </div>
-            <div class="col-lg-8">
-                <i class="fa fa-times"></i>
-                <h3>{{ _(alert.type + '!') }}</h3>
-                <p>{{ alert.msg }}</p>
-            </div>
-        </div>
-        <div ng-if="alert.type=='error'" class="col-lg-offset-3 col-lg-6 flash-message-err">
-            <div class="col-lg-4 img-message">
-                <img src="../../static/images/error.png" alt="error">
+                <img src="//static.profireader.com/static/images/success.png" alt="success">
             </div>
             <div class="col-lg-8">
                 <i class="fa fa-times" ng-click="closeAlert($index)"></i>
@@ -64,7 +55,16 @@
                 <p>{{ alert.msg }}</p>
             </div>
         </div>
-
+        <div ng-if="alert.type=='error'" class="col-lg-offset-3 col-lg-6 flash-message-err">
+            <div class="col-lg-4 img-message">
+                <img src="//static.profireader.com/static/images/error.png" alt="error">
+            </div>
+            <div class="col-lg-8">
+                <i class="fa fa-times" ng-click="closeAlert($index)"></i>
+                <h3>{{ _(alert.type + '!') }}</h3>
+                <p>{{ alert.msg }}</p>
+            </div>
+        </div>
     </div>
     {% endraw %}
 </div>
