fix bug in (search into filemanager) and fix bug with subscribe to portal(for not auth user)

--- a/profapp/templates/general/portals_list.html
+++ b/profapp/templates/general/portals_list.html
@@ -25,7 +25,7 @@
                         }
                     });
                 {% else %}
-                    window.location.href = {{ raw_url_for('reader.reader_subscribe')|safe }}({portal_id: portal_id});
+                    window.location.href = {{ raw_url_for('general.auth_before_subscribe_to_portal')|safe }}({portal_id: portal_id});
                 {% endif %}
             };
 
