--- a/profapp/templates/partials/reader/edit_portal_subscription.html
+++ b/profapp/templates/partials/reader/edit_portal_subscription.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-3 pull-right submit-subscriptions">
-                        <input type="submit" ng-click="edit()">
+                        <input pr-test="SubmitSubscriptions" type="submit" ng-click="edit()">
                     </div>
                 </div>
             </form>
