--- a/profapp/templates/pager.html
+++ b/profapp/templates/pager.html
@@ -11,7 +11,7 @@
 <script type="text/ng-template" id="cropper.html">
     {% raw %}
 
-    <div style="position: relative;  width: 100%; height: 100%;" class="img-container cropper-bg">
+    <div style="position: relative;  width: 100%; height: 100%; padding: 5px" class="img-container cropper-bg">
         <div  style="position: relative;  width: 100%; height: 100%;" class="img-container-cropper">
             <img style="width: 100%; height: 100%;"/>
         </div>
@@ -49,13 +49,13 @@
           </label>
 
         <button ng-repeat="(url_class_name, url) in prCrop.preset_urls" class="btn btn-primary" type="button"
-                ng-click="selectCustomUrl(url_class_name)">
+                ng-click="selectPresetUrl(url_class_name)">
                 <span class="docs-tooltip" data-toggle="tooltip" title="{{ url_class_name }}"><span
                         class="glyphicon {{ url_class_name }}"></span></span>
         </button>
 
         <button ng-if="resetable" class="btn btn-primary" type="button"
-                ng-click="reset()">
+                ng-click="resetModel()">
                 <span class="docs-tooltip" data-toggle="tooltip" title="Reset image"><span
                         class="glyphicon glyphicon-repeat"></span></span>
         </button>
