--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -30,14 +30,16 @@
 
         <div class="row link-page">
             <h5 class="">{{ _('Edit profile') }}</h5>
-            <a title="profile" href="{{ url_for('user.profile', user_id=user.id) }}"><i class="fa fa-user fa-2x"></i></a>
+            <a title="profile" href="{{ url_for('user.profile', user_id=user.id) }}"><i
+                    class="fa fa-user fa-2x"></i></a>
             <a title="setings" href="{{ url_for('user.profile', user_id=user.id) }}"><i class="fa fa-cog fa-2x"></i></a>
         </div>
 
         <div class="row">
             {#<img class="img-rounded profile-thumbnail" src="{{ user.gravatar(size=256) }}"><br>#}
 
-           <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 profile-thumbnail" style="background-image: url('{{ user.profireader_small_avatar_url }}')">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 profile-thumbnail"
+                 style="background-image: url('{{ user.profireader_small_avatar_url }}')">
                 <div class="control">
                     <a ng-click="mySwitch = !mySwitch">
                         <span ng-hide="mySwitch">[{{ '{{' }}_('upload picture'){{ '}}' }}]</span><span
@@ -48,12 +50,13 @@
                             onclick="document.getElementById('myform').submit();" style="border: none;">[{{ '{{' }}_('use
                         gravatar'){{ '}}' }}]</a>
                     </form>
-                    <form  id="avatar" ng-show="mySwitch" ng-init="mySwitch=false" action="{{ request.path }}" method="post"
-                      enctype="multipart/form-data">
-                    {{ '{{' }}_('Select image to upload'){{ '}}' }}:
-                    <input style="font-size: 12px;" type="file" name="avatar" id="fileToUpload" accept="image/*">
-                    <input type="submit" name="avatar" value="{{ '{{' }}_('Upload Image'){{ '}}' }}">
-                </form>
+                    <form id="avatar" ng-show="mySwitch" ng-init="mySwitch=false" action="{{ request.path }}"
+                          method="post"
+                          enctype="multipart/form-data">
+                        {{ '{{' }}_('Select image to upload'){{ '}}' }}:
+                        <input style="font-size: 12px;" type="file" name="avatar" id="fileToUpload" accept="image/*">
+                        <input type="submit" name="avatar" value="{{ '{{' }}_('Upload Image'){{ '}}' }}">
+                    </form>
                 </div>
             </div>
 
@@ -63,23 +66,28 @@
             {#</a>#}
 
 
-
-            <form class="col-lg-9 col-md-9 col-sm-9 col-xs-9 edit-grup" action="{{ url_for('user.edit_profile', user_id=user.id) }}" onsubmit="return AjaxPost()" method="post">
+            <form class="col-lg-9 col-md-9 col-sm-9 col-xs-9 edit-grup"
+                  action="{{ url_for('user.edit_profile', user_id=user.id) }}" onsubmit="return AjaxPost()"
+                  method="post">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Your display name') }}</span>
-                        <input class="form-control" aria-describedby="sizing-addon1" type="text" placeholder="name" name="name" value="{{ user.profireader_name }}">
+                    <input class="form-control" aria-describedby="sizing-addon1" type="text" required placeholder="name"
+                           name="name" value="{{ user.profireader_name }}">
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Your email') }}</span>
-                        <input class="form-control" aria-describedby="sizing-addon1" type="text" placeholder="name" name="name" value="{{ user.profireader_email }}">
+                    <input class="form-control" aria-describedby="sizing-addon1" type="email" required
+                           placeholder="name" name="name" value="{{ user.profireader_email }}">
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Your first name') }}</span>
-                        <input class="form-control" aria-describedby="sizing-addon1" type="text" placeholder="first name" name="first_name" value="{{ user.profireader_first_name or '' }}">
+                    <input class="form-control" aria-describedby="sizing-addon1" type="text" required
+                           placeholder="first name" name="first_name" value="{{ user.profireader_first_name or '' }}">
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Your last name') }}</span>
-                        <input class="form-control" aria-describedby="sizing-addon1" type="text" placeholder="last name" name="last_name" value="{{ user.profireader_last_name or '' }}">
+                    <input class="form-control" aria-describedby="sizing-addon1" type="text" required
+                           placeholder="last name" name="last_name" value="{{ user.profireader_last_name or '' }}">
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Gender') }}</span>
@@ -94,11 +102,11 @@
                         <input type="radio" name="gender" id="female" value="female">
                         <label for="female">{{ '{{' }}_('Female'){{ '}}' }}</label>
                     {% endif %}
-{#                        <input class="form-control" aria-describedby="sizing-addon1" type="text" placeholder="name" name="gender" value="{{ user.profireader_name }}">#}
+                    {#                        <input class="form-control" aria-describedby="sizing-addon1" type="text" placeholder="name" name="gender" value="{{ user.profireader_name }}">#}
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Language') }}</span>
-                <select id="language" name="language" style="width: 100px">
+                    <select id="language" name="language" style="width: 100px">
                         {% if user.lang=='en' %}
                             <option selected="selected">en</option>
                             <option>uk</option>
@@ -110,25 +118,30 @@
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Your web-page') }}</span>
-                        <input class="form-control" aria-describedby="sizing-addon1" type="text" placeholder="www.your.webpage.com" name="link" value="{{ user.profireader_link or '' }}">
+                    <input class="form-control" aria-describedby="sizing-addon1" type="url"
+                           placeholder="www.your.webpage.com" name="link" value="{{ user.profireader_link or '' }}">
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Phone') }}</span>
-                        <input class="form-control" aria-describedby="sizing-addon1" type="text" placeholder="your phone" name="phone" value="{{ user.profireader_phone or '' }}">
+                    <input class="form-control" aria-describedby="sizing-addon1" type="tel" required
+                           placeholder="your phone" name="phone" value="{{ user.profireader_phone or '' }}">
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('Location') }}</span>
-                        <input class="form-control" aria-describedby="sizing-addon1" type="text" placeholder="your city" name="location" value="{{ user.location or '' }}">
+                    <input class="form-control" aria-describedby="sizing-addon1" type="text" placeholder="your city"
+                           name="location" value="{{ user.location or '' }}">
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                     <span class="input-group-addon" id="sizing-addon1">{{ _('About me') }}</span>
-                        <textarea class="form-control" style="height: 100px;" aria-describedby="sizing-addon1" type="text" placeholder="Give us some information about you please" rows="8" cols="40" name="about_me" value="{{ user.about_me or '' }}"></textarea>
+                    <textarea class="form-control" style="height: 100px;" aria-describedby="sizing-addon1" type="text"
+                              placeholder="Give us some information about you please" rows="8" cols="40" name="about_me"
+                              value="{{ user.about_me or '' }}"></textarea>
                 </div>
                 <div class="item"><span></span><input type="submit" value="Update Profile"
                                                       name="submit"></div>
             </form>
 
-<!--
+            <!--
             <form action="{{ url_for('user.edit_profile', user_id=user.id) }}" onsubmit="return AjaxPost()"
                   method="post">
                 <div class="item"><span>{{ '{{' }}_('Your display name'){{ '}}' }}:</span><input type="text"
