--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -132,11 +132,11 @@ body {
 }
 .menu-profile .login-profile {
   background-color: #c62828;
-  padding: 7px 10px;
+  padding: 7px 7px;
   border-radius: 3px;
   margin-top: 2px;
-  margin-right: -5px;
   margin-left: 10px;
+  margin-left: 0;
 }
 .menu-site a {
   color: #fff;
@@ -417,6 +417,12 @@ body {
 .some-company-info a {
   color: #18BCAB;
   text-decoration: none;
+}
+.company .edit-company button {
+  width: 115px;
+  padding: 0;
+  margin-left: 25px;
+  margin-right: -15px;
 }
 .company h3 {
   color: #e64a19;
