--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -716,59 +716,61 @@ body {
 .name-form {
   margin-top: 12px;
 }
-.flash-message-err {
+.flash-message {
+  box-shadow: 3px 4px 7px rgba(0, 0, 0, 0.3);
   z-index: 100;
   position: fixed;
   right: 0;
   background-color: #fff;
   bottom: -30px;
-  box-shadow: 3px 4px 7px rgba(0, 0, 0, 0.3);
   margin-bottom: 50px;
   padding-left: 0;
 }
-.flash-message-err h3 {
+.flash-message h3 {
+  margin-top: 30px;
+}
+.flash-message .img-message {
+  padding-left: 0;
+}
+.flash-message i {
+  margin-top: 15px;
+  display: inline;
+  float: right;
+  cursor: pointer;
+  color: #424242;
+}
+.flash-message p {
+  color: #424242;
+}
+.flash-message img {
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 128px;
+  height: 129px;
+}
+.flash-message-danger h3 {
   color: #FF67A0;
-  margin-top: 30px;
 }
-.flash-message-err p {
-  color: #424242;
+.flash-message-danger img {
+  background-image: url('//static.profireader.com/static/images/flash-message-danger.png');
 }
-.flash-message-err .img-message {
-  padding-left: 0;
-}
-.flash-message-err i {
-  margin-top: 15px;
-  display: inline;
-  float: right;
-  color: #424242;
-  cursor: pointer;
-}
-.flash-message-succsess {
-  position: fixed;
-  z-index: 90;
-  right: 0;
-  bottom: -30px;
-  background-color: #fff;
-  box-shadow: 3px 4px 7px rgba(0, 0, 0, 0.3);
-  margin-bottom: 50px;
-  padding-left: 0;
-}
-.flash-message-succsess h3 {
+.flash-message-success h3 {
   color: #A6F284;
-  margin-top: 30px;
 }
-.flash-message-succsess p {
-  color: #424242;
+.flash-message-success img {
+  background-image: url('//static.profireader.com/static/images/flash-message-success.png');
 }
-.flash-message-succsess .img-message {
-  padding-left: 0;
+.flash-message-warning h3 {
+  color: #A6F284;
 }
-.flash-message-succsess i {
-  margin-top: 15px;
-  color: #424242;
-  display: inline;
-  float: right;
-  cursor: pointer;
+.flash-message-warning img {
+  background-image: url('//static.profireader.com/static/images/flash-message-warning.png');
+}
+.flash-message-info h3 {
+  color: #A6F284;
+}
+.flash-message-info img {
+  background-image: url('//static.profireader.com/static/images/flash-message-info.png');
 }
 /* --- HELP PAGE ---*/
 .help-page {
