--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -172,7 +172,7 @@
                             </div>
                             <div class="col-lg-2">{{ _('Email:') }}</div>
                             <div class="col-lg-10 edit-data">
-                                <input type=text class="form-control border-radius" value="{{ company.email }}"
+                                <input type="text" class="form-control border-radius" value="{{ company.email }}"
                                        id="basic-url" aria-describedby="basic-addon3" ng-model="data.email">
                             </div>
                             <div class="col-lg-3">{{ _('Lang and Long:') }}</div>
