--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -1,14 +1,14 @@
 <script type="text/ng-template" id="tos_dialog.html">
             <div class="modal-header">
-                <h3 class="modal-title">{{ _('Pls accept tos dialog header') }}</h3>
+                <h3 pr-test="LicenceTitle" class="modal-title">{{ _('Pls accept tos dialog header') }}</h3>
             </div>
             <div class="modal-body">
                 {{ __('Licence text') }}
             </div>
 
             <div class="modal-footer">
-            <button type="button" class="btn btn-default" ng-click="accept_tos('accept')">Accept</button>
-            <button type="button" class="btn btn-default" ng-click="accept_tos('decline')">Decline</button>
+            <button pr-test="AcceptLicence" type="button" class="btn btn-default" ng-click="accept_tos('accept')">Accept</button>
+            <button pr-test="DeclineLicence" type="button" class="btn btn-default" ng-click="accept_tos('decline')">Decline</button>
             </div>
         </div>
     </script>
@@ -85,7 +85,7 @@
     <div class="container">
 
         <div class="row">
-            <button type="button" ng-click="tos()" class="btn btn-info btn-lg" ng-if="user.id && !user.tos">{{ _('Accept licence') }}</button>
+            <button pr-test="HeaderAcceptLicence" type="button" ng-click="tos()" class="btn btn-info btn-lg" ng-if="user.id && !user.tos">{{ _('Accept licence') }}</button>
             <div class="navbar-header col-lg-4 col-md-4 col-sm-4 col-xs-12 hamburger-menu">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                         data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
