--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -345,6 +345,9 @@ body {
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
   border: 1px solid #f5f5f5;
 }
+.search-result h4 {
+  margin-top: 30px;
+}
 .photo-search a {
   border-radius: 3px;
   margin-top: 15px;
