--- a/profapp/templates/index_layout.html
+++ b/profapp/templates/index_layout.html
@@ -38,7 +38,7 @@
     {{ super() }}
 
     <script>
-    var pr_angular_modules = ['ui.bootstrap', 'profireaderdirectives', 'ngSanitize', 'ajaxFormModule', 'profireaderdirectives', 'ui.grid', 'ui.grid.pagination', 'ui.grid.edit', 'ngAnimate', 'ngTouch', 'ui.grid.selection', 'ui.grid.grouping', 'ui.grid.treeView', 'ui.slider', 'ui.tinymce'];
+    var pr_angular_modules = ['ui.bootstrap', 'profireaderdirectives', 'ngSanitize', 'profireaderdirectives', 'ui.grid', 'ui.grid.pagination', 'ui.grid.edit', 'ngAnimate', 'ngTouch', 'ui.grid.selection', 'ui.grid.grouping', 'ui.grid.treeView', 'ui.slider', 'ui.tinymce'];
     </script>
 
     <link rel="shortcut icon" href="//static.profireader.com/static/favicon.ico" type="image/x-icon"/>
