--- a/profapp/templates/company/companies_partners.html
+++ b/profapp/templates/company/companies_partners.html
@@ -42,7 +42,7 @@
        <div ng-controller="company_partners">
         <div class="grid" id="grid1" ui-grid-pagination ui-grid="gridOptions1">
             <div class="well grid-loading" ng-show="loading">
-              <i class="fa fa-spin fa-spinner"></i><div>Data Loading...</div>
+              <i class="fa fa-spin fa-spinner"></i><div>{{ _('Data Loading...') }}</div>
             </div>
         </div>
         </div>
