--- a/profapp/templates/auth/unconfirmed.html
+++ b/profapp/templates/auth/unconfirmed.html
@@ -12,14 +12,14 @@
 
 <div class="container" ng-controller="UserLoginController">
     <h1 class="nice-title">Hello, {{ current_user.profireader_name }}!<span></span></h1>
-    <h3 pr-test="UnConfirmedYet">{{ '{{' }}_('You have not confirmed your account yet'){{ '}}' }}.</h3>
+    <h3 pr-test="UnConfirmedYet">{{ _('You have not confirmed your account yet') }}.</h3>
     <p>
-        {{ '{{' }}_('Before you can access this site you need to confirm your account.
-        Check your inbox, you should have received an email with a confirmation link'){{ '}}' }}.
+        {{ _('Before you can access this site you need to confirm your account.
+        Check your inbox, you should have received an email with a confirmation link') }}.
     </p>
     <p>
-        {{ '{{' }}_('Need another confirmation email'){{ '}}' }}?
-        <a pr-test="AnotherConfirmEmail" href="{{ url_for('auth.resend_confirmation') }}">{{ '{{' }}_('Click here'){{ '}}' }}</a>
+        {{ _('Need another confirmation email') }}?
+        <a pr-test="AnotherConfirmEmail" href="{{ url_for('auth.resend_confirmation') }}">{{ _('Click here') }}</a>
     </p>
 </div>
 {% endblock portal_content %}
