--- a/profapp/templates/help.html
+++ b/profapp/templates/help.html
@@ -10,7 +10,7 @@
     </div>
         <form class="help-page">
             <h3>{{ __('Надішліть нам повідомлення') }}<br>
-                <small>{{ __('Адміністратор сайту зв~яжеться з Вами') }}</small>
+                <small>{{ __('Адміністратор сайту зв’яжеться з Вами') }}</small>
             </h3>
             <div class="form-for-message col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3">
 
