--- a/profapp/templates/company/company_profile.html
+++ b/profapp/templates/company/company_profile.html
@@ -60,7 +60,7 @@
                 $scope.edit = false;
                 $scope.save = false;
                 deff(resp);
-                $scope.company = $scope.data_saved;
+                $scope.company = resp
             };
 
             $scope.afterLoad = function (resp, deff) {
